home-decoration-editor/src/App.scss
body {
  margin: 0;
}

.wrap {
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;

  .Header {
    height: 60px;
    border-bottom: 1px solid #000;
    flex-shrink: 0;
  }

  .editor {
    flex: 1;
    min-height: 0;
    position: relative;

    .Main {
      position: absolute;
      inset: 0;
      overflow: hidden;
      #threejs-3d-container,
      #threejs-2d-container {
        position: absolute;
        inset: 0;
      }
      .mode-change-btns {
        position: absolute;
        z-index: 3;
        bottom: 20px;
        left: 320px;
      }
    }

    .drawer-bar {
      width: 10px;
      height: 80px;
      background: black;
      position: absolute;
      right: -10px;
      top: 50%;
      transform: translateY(-50%);
      cursor: pointer;
    }
    .Properties {
      .drawer-bar {
        left: -10px;
      }
    }

    .Menu,
    .Properties {
      z-index: 10;
      position: absolute;
      top: 0;
      width: 300px;
      height: 100%;
      background: pink;
      transition: left 0.5s ease-in-out, right 0.5s ease-in-out;
    }
    .Menu {
      left: 0;
      border-right: 1px solid #000;
    }
    .Properties {
      right: 0;
      background: orange;
      border-left: 1px solid #000;
    }
  }
}

